--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -1,5 +1,6 @@
 .layoutWrapper {
-	min-height: calc(100vh - 70px);
+	min-height: calc(100vh - var(--nextui--navbarHeight));
 	.contentWrapper {
+		@apply w-full;
 	}
 }
