fix css homePage

--- a/src/components/home-page/about/About.module.scss
+++ b/src/components/home-page/about/About.module.scss
@@ -22,7 +22,7 @@
 		@apply flex flex-col items-center gap-8 z-1;
 
 		.title {
-			@apply text-6xl capitalize;
+			@apply text-6xl capitalize font-bold;
 		}
 
 		.description {
