--- a/src/components/home-page/test-banner/TestBanner.module.scss
+++ b/src/components/home-page/test-banner/TestBanner.module.scss
@@ -1,3 +1,20 @@
 .container {
-	
+	@apply flex flex-col items-center gap-6 p-layout rounded-3xl bg-backgroundLight max-w-[1000px] text-center mx-auto;
+	border: 10px solid transparent;
+	background-image: linear-gradient(var(--background-light), var(--background-light)),
+		linear-gradient(to right bottom, var(--secondary), var(--secondary-blue));
+	background-origin: border-box;
+	background-clip: padding-box, border-box;
+
+	.title {
+		@apply text-3xl text-secondary uppercase font-bold;
+	}
+
+	.description {
+		@apply text-5xl text-secondaryBlue uppercase font-bold;
+	}
+
+	.btn {
+		@apply btn-primary text-2xl rounded-full;
+	}
 }
