--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,11 +5,12 @@
 :root {
 	--container-max-width: 1600px;
 	--primary: #08c466;
-	--secondary: #005801;
+	--secondary: #00b303;
 	--secondary-gray: #006b6a;
 	--secondary-blue: #59bab8;
 	--secondary-dirt: #bb855d;
 	--background: #192024;
+	--background-light: var(--nextui-colors-gray200);
 	--light-gray: #666666;
 	--bg-gray-800: rgb(77 77 77 / 1);
 	--background-landscape: #171b3d;
@@ -25,6 +26,7 @@ html,
 body {
 	max-width: 100vw;
 	scroll-behavior: smooth !important;
+	font-family: 'Rubik';
 }
 
 a {
