--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,12 +14,53 @@
 	--light-gray: #666666;
 	--bg-gray-800: rgb(77 77 77 / 1);
 	--background-landscape: #171b3d;
+	--hover: #f74343;
+	--hover-error: #dc0909;
+	--warn: #513826;
+	--warn-text: #d09f5f;
 }
 
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+}
+
+/* Firefox */
+* {
+	scrollbar-width: thin;
+	scrollbar-color: #666666 transparent;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+	width: 8px;
+	width: 8px;
+}
+*::-webkit-scrollbar-track {
+	border-radius: 16px;
+	background-color: transparent;
+}
+
+*::-webkit-scrollbar-track:hover {
+	background-color: transparent;
+}
+
+*::-webkit-scrollbar-track:active {
+	background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+	border-radius: 16px;
+	background-color: #666666;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+	background-color: #999999;
+}
+
+*::-webkit-scrollbar-thumb:active {
+	background-color: #999999;
 }
 
 html,
