--- a/src/components/server-header/ServerHeader.module.scss
+++ b/src/components/server-header/ServerHeader.module.scss
@@ -5,7 +5,7 @@
 		padding-bottom: 1.25rem;
 
 		.mainBar {
-			@apply flex flex-row flex-wrap justify-between items-center;
+			@apply flex flex-row flex-wrap justify-between items-center gap-5;
 			.mainBarInfo {
 				@apply flex flex-row flex-nowrap items-center gap-4;
 				.backBtn {
@@ -28,6 +28,14 @@
 
 			.mainBarActions {
 				@apply flex flex-row flex-wrap gap-4;
+
+				.btnError {
+					@apply btn-error text-2xl;
+				}
+
+				.btnStart {
+					@apply btn-primary text-2xl;
+				}
 			}
 		}
 
