--- a/src/styles/CustomSelect.scss
+++ b/src/styles/CustomSelect.scss
@@ -82,8 +82,14 @@
 		&__option {
 			cursor: pointer !important;
 			font-size: 1.125rem !important;
-			padding: 12px 15px;
+			padding: 0 0 !important;
 			z-index: 10000 !important;
+
+			a {
+				width: 100% !important;
+				padding: 12px 15px !important;
+				display: block !important;
+			}
 
 			&--is-focused {
 				background-color: lighten(#292a2e, 8%) !important;
