--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -67,7 +67,7 @@ html,
 body {
 	max-width: 100vw;
 	scroll-behavior: smooth !important;
-	font-family: 'Rubik';
+	font-family: 'Rubik', sans-serif;
 }
 
 a {
