--- a/src/screens/server/mods/ServerMods.module.scss
+++ b/src/screens/server/mods/ServerMods.module.scss
@@ -115,32 +115,13 @@
 		}
 
 		.divider {
-			@apply bg-lightGray h-full w-[1px] mr-1;
+			@apply bg-lightGray h-full w-[1px];
 
 			grid-area: divider;
 		}
 
 		.search {
 			grid-area: search;
-
-			.searchInput {
-				@apply relative flex h-14;
-
-				.searchInputField {
-					@apply w-full text-2xl px-6 border-none outline outline-1 outline-transparent -outline-offset-1 text-white bg-backgroundLight;
-
-					height: inherit;
-
-					&:focus,
-					&:active {
-						@apply outline-primary;
-					}
-				}
-
-				.searchInputBtn {
-					@apply btn-primary rounded-none p-4;
-				}
-			}
 		}
 	}
 }
