--- a/src/components/ui/search-mods/search-list/SearchList.module.scss
+++ b/src/components/ui/search-mods/search-list/SearchList.module.scss
@@ -1,4 +1,10 @@
 .container {
 	@apply absolute border-2 border-lightGray bg-backgroundLight w-full animate-fade z-10;
 	top: calc(100% + 15px);
+
+	animation: fade 0.1s ease-in;
+
+	.empty {
+		@apply flex flex-row items-center justify-center px-4 py-8 text-2xl;
+	}
 }
