--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'styles/toastr/index.scss';
+
 :root {
 	--container-max-width: 1600px;
 	--primary: #08c466;
@@ -110,4 +112,3 @@ a {
 input[type='search']::-webkit-search-cancel-button {
 	display: none;
 }
-
