--- a/src/components/home-page/pricing/Pricing.module.scss
+++ b/src/components/home-page/pricing/Pricing.module.scss
@@ -8,7 +8,7 @@
 			@apply grid-cols-2;
 		}
 
-		@include md(sm, 'max') {
+		@include md(md, 'max') {
 			@apply grid-cols-1;
 		}
 
@@ -38,6 +38,10 @@
 						@apply text-xl;
 					}
 				}
+			}
+
+			.pricing {
+				@apply text-xl;
 			}
 
 			.actions {
