--- a/src/components/home-page/qualities/Qualities.module.scss
+++ b/src/components/home-page/qualities/Qualities.module.scss
@@ -21,8 +21,8 @@
 		}
 	}
 	.qualities {
-		@apply grid gap-10;
 		grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+		@apply grid gap-10 sm:grid-cols-1;
 
 		.quality {
 			@apply flex flex-col gap-4 items-center;
@@ -32,7 +32,7 @@
 			}
 
 			.title {
-				@apply text-3xl uppercase text-secondaryBlue text-center font-bold;
+				@apply text-3xl sm:text-2xl uppercase text-secondaryBlue text-center font-bold;
 			}
 
 			.line {
