--- a/src/components/server-header/ServerHeader.module.scss
+++ b/src/components/server-header/ServerHeader.module.scss
@@ -69,12 +69,13 @@
 	}
 
 	.controls {
-		@apply flex flex-row flex-wrap items-center justify-between gap-x-2 gap-y-2;
+		@apply flex flex-row flex-wrap items-center justify-between gap-x-2 gap-y-6 py-5;
 
 		.tabs {
-			@apply flex flex-row flex-wrap justify-start items-center gap-x-10 gap-y-0;
+			@apply flex flex-row flex-wrap justify-start items-center gap-x-10 gap-y-6;
+
 			a {
-				@apply block py-5 transition-colors text-2xl;
+				@apply block py-0 transition-colors text-2xl pb-3;
 
 				&:hover {
 					@apply text-primary;
@@ -83,9 +84,10 @@
 		}
 
 		.otherActions {
-			@apply flex flex-row flex-nowrap items-center gap-8 py-5;
+			@apply flex flex-row flex-nowrap items-center gap-8;
 
-			.otherActionsBtn {
+			// #TODO: Поделиться кнопка
+			/* .otherActionsBtn {
 				@apply flex flex-row flex-nowrap items-center gap-2 text-lg;
 
 				.otherActionsIcon {
@@ -95,7 +97,43 @@
 				.otherActionsText {
 					@apply text-gray-200 text-2xl;
 				}
-			}
+			} */
+		}
+	}
+}
+
+.modsCartBtn {
+	@apply text-xl rounded-2xl border-2 border-lightGray bg-transparent py-1 px-3 whitespace-nowrap;
+}
+
+.cart {
+	@apply flex flex-row flex-nowrap justify-end items-center flex-1;
+}
+
+.cartMods {
+	@apply flex flex-col gap-2 p-4;
+
+	.cartMod {
+		@apply flex flex-row items-center gap-4 flex-nowrap rounded-lg transition-colors py-2 px-3 hover:bg-lightGray;
+
+		.cartModImage {
+			@apply block;
+		}
+
+		.cartModTitle {
+			@apply text-xl text-white flex-1;
+		}
+	}
+
+	.cartActions {
+		@apply flex flex-col gap-3 mt-4;
+
+		.cartSubmitBtn {
+			@apply btn-primary py-1 px-2 text-xl;
+		}
+
+		.cartResetBtn {
+			@apply btn-error py-1 px-2 text-xl;
 		}
 	}
 }
