--- a/src/styles/CustomSelect.scss
+++ b/src/styles/CustomSelect.scss
@@ -102,6 +102,14 @@
 					padding: 12px 15px !important;
 					display: block !important;
 				}
+
+				&--small {
+					a {
+						width: 100% !important;
+						padding: 6px 15px !important;
+						display: block !important;
+					}
+				}
 			}
 		}
 
