--- a/src/components/mod-card/ModCard.module.scss
+++ b/src/components/mod-card/ModCard.module.scss
@@ -30,10 +30,16 @@
 		@apply text-xl;
 
 		grid-area: name;
+
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	.author {
-		@apply flex flex-row items-center h-[28px] text-md text-lightGray;
+		@apply flex flex-row items-center flex-nowrap h-[28px] min-w-[160px] flex-1 text-sm text-lightGray;
 
 		grid-area: author;
 
@@ -85,7 +91,7 @@
 	.categories {
 		grid-area: categories;
 
-		@apply border-t-2 border-lightGray -mx-6 px-6 py-3 overflow-hidden text-ellipsis h-[50px];
+		@apply border-t-2 border-lightGray -mx-6 px-6 py-4 overflow-hidden text-ellipsis h-[50px];
 
 		.classTag {
 			@apply inline-block border-2 border-lightGray px-2 py-1;
@@ -101,36 +107,4 @@
 			}
 		}
 	}
-}
-
-.container {
-	@apply border rounded-xl p-5 z-2 max-w-[1000px];
-}
-
-.header {
-	@apply flex mb-5;
-}
-
-.numbers {
-	@apply flex;
-}
-
-.number {
-	@apply flex mr-6;
-}
-
-.icon {
-	@apply mr-2;
-}
-
-.info {
-	@apply ml-5 flex flex-col justify-between;
-}
-
-.classification {
-	@apply flex;
-}
-
-.category {
-	@apply ml-6 z-5;
 }
