--- a/src/components/server-header/ServerHeader.module.scss
+++ b/src/components/server-header/ServerHeader.module.scss
@@ -29,12 +29,12 @@
 			.mainBarActions {
 				@apply flex flex-row flex-wrap gap-4;
 
-				.btnError {
-					@apply btn-error text-2xl;
+				.btnStop {
+					@apply btn-error text-2xl flex flex-row items-center flex-nowrap gap-4;
 				}
 
 				.btnStart {
-					@apply btn-primary text-2xl;
+					@apply btn-primary text-2xl flex flex-row items-center flex-nowrap gap-4;
 				}
 			}
 		}
