--- a/src/components/mod-card/ModCard.module.scss
+++ b/src/components/mod-card/ModCard.module.scss
@@ -1,5 +1,7 @@
+@import 'styles/mixins.scss';
+
 .card {
-	@apply bg-backgroundLight p-6 relative z-1 transition-colors h-[225px];
+	@apply bg-backgroundLight p-6 relative z-1 transition-colors h-[232px];
 
 	display: grid;
 	grid-template-areas:
@@ -91,7 +93,7 @@
 	.categories {
 		grid-area: categories;
 
-		@apply border-t-2 border-lightGray -mx-6 px-6 py-4 overflow-hidden text-ellipsis h-[50px];
+		@apply border-t-2 border-lightGray -mx-6 px-6 py-4 overflow-hidden text-ellipsis h-[54px];
 
 		.classTag {
 			@apply inline-block border-2 border-lightGray px-2 py-1;
@@ -104,6 +106,36 @@
 		> * {
 			&:not(:last-child) {
 				@apply mr-3;
+			}
+		}
+	}
+
+	@include md(sm, 'max') {
+		@apply h-[308px];
+
+		grid-template-areas:
+			'image . name name add-btn'
+			'image . author author add-btn'
+			'desc desc desc desc desc'
+			'details details details details details'
+			'categories categories categories categories categories';
+		grid-template-columns: 80px 16px auto 1fr auto;
+		grid-template-rows: 54px 26px 60px 36px;
+
+		.image {
+			height: 84px;
+			width: 84px;
+
+			img {
+				height: 84px;
+				width: 84px;
+			}
+		}
+
+		.author {
+			&::before {
+				margin: 0;
+				content: '';
 			}
 		}
 	}
