--- a/src/screens/server/create/CreateServer.module.scss
+++ b/src/screens/server/create/CreateServer.module.scss
@@ -11,7 +11,7 @@
 				@apply flex flex-row flex-wrap gap-x-6 gap-y-3;
 
 				.gameRadioBtn {
-					@apply flex flex-col items-center min-w-[200px] justify-center gap-y-2 py-2 px-4 bg-secondaryGray rounded-2xl cursor-pointer hover:bg-primary;
+					@apply flex flex-col items-center min-w-[200px] justify-center gap-y-2 py-2 px-4 bg-secondaryGray rounded-2xl cursor-pointer hover:bg-primary transition-colors;
 
 					flex: 1 1 auto;
 
@@ -55,7 +55,7 @@
 					@apply flex flex-row gap-2 flex-wrap;
 
 					.location {
-						@apply flex flex-col gap-2 items-center justify-center bg-secondaryGray px-4 py-2 rounded-lg cursor-pointer hover:bg-primary text-xl;
+						@apply flex flex-col gap-2 items-center justify-center bg-secondaryGray px-4 py-2 rounded-lg cursor-pointer hover:bg-primary text-xl transition-colors;
 
 						flex: 1 1 auto;
 
