--- a/src/screens/server/create/CreateServer.module.scss
+++ b/src/screens/server/create/CreateServer.module.scss
@@ -27,6 +27,10 @@
 					&.gameRadioBtnActive {
 						@apply bg-primary;
 					}
+
+					&.gameRadioBtnDisabled {
+						@apply bg-backgroundLight cursor-default;
+					}
 				}
 			}
 
