--- a/src/components/server-mini-console/ServerMiniConsole.module.scss
+++ b/src/components/server-mini-console/ServerMiniConsole.module.scss
@@ -12,9 +12,19 @@
 	}
 
 	.body {
+		@apply p-0;
+
+		&.mini {
+			@apply pb-2;
+		}
+
 		.lines {
 			@apply overflow-auto;
 			max-height: 300px;
+
+			&.mini {
+				@apply px-2;
+			}
 
 			.line {
 				@apply w-full text-lg px-2;
