--- a/src/screens/server/overview/ServerOverview.module.scss
+++ b/src/screens/server/overview/ServerOverview.module.scss
@@ -17,3 +17,47 @@
 		grid-template-columns: 1fr;
 	}
 }
+
+.guideModal {
+	@apply bg-backgroundLight border-lightGray border-2;
+
+	.guideModalHeader {
+		@apply text-2xl;
+	}
+
+	.guideModalBody {
+		@apply text-xl text-left;
+
+		ul {
+			@apply flex flex-col gap-2;
+
+			li {
+				@apply flex flex-row items-start gap-3;
+
+				&::before {
+					display: inline-block;
+					content: '';
+					min-width: 8px;
+					min-height: 8px;
+					width: 8px;
+					height: 8px;
+					border-radius: 20px;
+					background-color: var(--primary);
+					margin-top: 10px;
+				}
+			}
+		}
+	}
+
+	.guideModalFooter {
+		@apply flex flex-row items-center justify-center gap-4;
+
+		.skipGuideBtn {
+			@apply btn-default py-1 px-3 text-xl;
+		}
+
+		.startGuideBtn {
+			@apply btn-primary py-1 px-3 text-xl;
+		}
+	}
+}
