--- a/src/components/server-mini-console/ServerMiniConsole.module.scss
+++ b/src/components/server-mini-console/ServerMiniConsole.module.scss
@@ -26,6 +26,18 @@
 				@apply px-2;
 			}
 
+			.consoleEmpty {
+				@apply w-full flex flex-col items-center justify-center gap-2 h-[250px];
+
+				span {
+					@apply text-2xl;
+				}
+
+				&.consoleEmptyFull {
+					@apply h-full;
+				}
+			}
+
 			.line {
 				@apply w-full text-lg px-2;
 
@@ -90,8 +102,8 @@
 		}
 
 		.lines {
-			height: 600px;
-			max-height: 600px;
+			height: 450px;
+			max-height: 450px;
 
 			.line {
 				@apply text-xl;
