complete backups ui

--- a/src/screens/server/files/ServerFiles.module.scss
+++ b/src/screens/server/files/ServerFiles.module.scss
@@ -19,7 +19,7 @@
 			@apply flex flex-row items-center gap-3 flex-1 justify-end;
 
 			.headerActionBtn {
-				@apply p-2 bg-primary rounded-lg;
+				@apply p-2 bg-secondary rounded-lg;
 			}
 		}
 	}
