--- a/src/pages/server/overview/styles.module.scss
+++ b/src/pages/server/overview/styles.module.scss
@@ -1,4 +1,4 @@
-@import 'styles/mixins.scss';
+@import '@/app/styles/_mixins.scss';
 
 .container {
 	@apply grid gap-5;
@@ -17,4 +17,3 @@
 		grid-template-columns: 1fr;
 	}
 }
-
