--- a/src/widgets/server/mini-console/ui/styles.module.scss
+++ b/src/widgets/server/mini-console/ui/styles.module.scss
@@ -1,5 +1,5 @@
 .card {
-	@apply flex flex-col bg-backgroundLight rounded-layout;
+	@apply flex flex-col bg-card rounded-layout;
 
 	.header {
 		@apply text-2xl px-6 pt-6 mb-3;
@@ -42,31 +42,31 @@
 				@apply w-full text-lg px-2;
 
 				&.error {
-					@apply bg-errorHover text-errorText;
+					@apply bg-destructive text-destructive-foreground;
 
 					.info {
-						@apply text-errorText;
+						@apply text-destructive-foreground;
 
 						.message {
-							@apply text-errorText;
+							@apply text-destructive-foreground;
 						}
 					}
 				}
 
 				&.warn {
-					@apply bg-warn text-warnText;
+					@apply bg-yellow-600 text-yellow-400;
 
 					.info {
-						@apply text-warnText;
+						@apply text-yellow-400;
 
 						.message {
-							@apply text-warnText;
+							@apply text-yellow-400;
 						}
 					}
 				}
 
 				.info {
-					@apply text-lightGray;
+					@apply text-gray-100;
 
 					.message {
 						@apply text-gray-200;
@@ -77,12 +77,13 @@
 
 		.enterCommand {
 			@apply p-2;
-			.slash {
+
+			/*.slash {
 				@apply flex h-7 w-7 items-center text-xl justify-center rounded-md bg-backgroundLight;
 				margin: 0 5px 0 15px;
 				line-height: 24px;
 				box-sizing: content-box;
-			}
+			} */
 
 			input {
 				@apply text-xl;
@@ -96,7 +97,7 @@
 
 			.headerActions {
 				a {
-					@apply btn-secondary-gray text-2xl py-1 mb-1;
+					@apply text-2xl py-1 mb-1;
 				}
 			}
 		}
