--- a/src/widgets/header/ui/menu/styles.module.scss
+++ b/src/widgets/header/ui/menu/styles.module.scss
@@ -1,8 +1,8 @@
 .container {
 	@apply top-0 left-0 fixed bg-background z-menu opacity-0 invisible md:hidden;
 
-	width: 100dvw;
-	height: 100dvh;
+	width: var(--vw);
+	height: var(--vh);
 
 	transition: height 0.2s linear;
 
