--- a/src/widgets/home/ui/about/styles.module.scss
+++ b/src/widgets/home/ui/about/styles.module.scss
@@ -1,7 +1,8 @@
 .container {
 	//#TODO:Сжать background для AboutSection
 	@apply relative w-full flex flex-row justify-center items-center p-layout;
-	height: 100vh;
+
+	height: var(--vh);
 	background-image: url('/landscape-bg.webp');
 	background-repeat: no-repeat;
 	background-position: center;
@@ -14,32 +15,32 @@
 		bottom: 0;
 		left: 0;
 		width: 100%;
-		height: 400px;
+		height: 600px;
 		z-index: 0;
-		background: linear-gradient(to top, var(--background) 5%, transparent);
+		background: linear-gradient(to top, hsl(var(--card)) 5%, transparent);
 	}
 
 	.content {
 		@apply flex flex-col items-center gap-8 z-1;
 
 		.title {
-			@apply text-6xl capitalize font-bold sm:text-4xl;
+			@apply text-4xl sm:text-6xl capitalize font-bold;
 		}
 
 		.description {
 			@apply flex flex-col items-center gap-2;
 			p {
-				@apply text-3xl text-center text-gray-200 sm:text-2xl;
+				@apply text-2xl sm:text-3xl text-center text-gray-200;
 				max-width: 1000px;
 			}
 		}
 
 		.start {
-			@apply rounded-full text-2xl text-gray-200 sm:text-xl;
+			@apply rounded-full text-xl sm:text-2xl text-gray-200;
 		}
 
 		.scrollLink {
-			@apply absolute bottom-4 rounded-full text-2xl sm:text-xl;
+			@apply absolute bottom-4 rounded-full text-xl sm:text-2xl;
 		}
 	}
 }
