--- a/src/shared/lib/react-joyride/ui/styles.module.scss
+++ b/src/shared/lib/react-joyride/ui/styles.module.scss
@@ -14,9 +14,8 @@
 			width: 8px;
 			height: 8px;
 			border-radius: 20px;
-			background-color: var(--primary);
+			background-color: hsl(var(--primary));
 			margin-top: 10px;
 		}
 	}
 }
-
