--- a/src/widgets/server/server-header/ui/styles.module.scss
+++ b/src/widgets/server/server-header/ui/styles.module.scss
@@ -2,7 +2,8 @@
 	@apply bg-transparent;
 
 	.bars {
-		@apply flex flex-col justify-start gap-5 border-b border-border;
+		@apply flex flex-col justify-start gap-5 border-b-2 border-border;
+
 		padding-bottom: 1.25rem;
 
 		.mainBar {
@@ -60,18 +61,9 @@
 	}
 
 	.controls {
-		@apply flex flex-row flex-wrap items-center justify-between gap-x-2 gap-y-6 py-5;
+		@apply flex flex-row flex-wrap items-center justify-between gap-x-2 gap-y-6 py-0;
 
 		.tabs {
-			@apply flex flex-row flex-wrap justify-start items-center gap-x-10 gap-y-6;
-
-			a {
-				@apply block py-0 transition-colors text-2xl pb-3;
-
-				&:hover {
-					@apply text-primary;
-				}
-			}
 		}
 
 		.otherActions {
