--- a/src/widgets/server/server-tabs/ui/styles.module.scss
+++ b/src/widgets/server/server-tabs/ui/styles.module.scss
@@ -8,7 +8,18 @@
 	}
 } */
 
-.isActiveLink {
-	@apply border-b-primary transition-all;
-	border-bottom-width: 3px;
+.list {
+	@apply flex flex-row flex-wrap justify-start items-center gap-x-10 gap-y-6;
+
+	.link {
+		@apply block py-4 transition-colors text-2xl;
+
+		&.isActiveLink {
+			@apply text-primary border-b-primary border-b-2 transition-all;
+		}
+
+		&:hover {
+			@apply text-primary/80 border-b-primary/80;
+		}
+	}
 }
